compiler/src/gen/PAGEParser.java
// Generated from C:/Users/ESRAA/Downloads/Telegram Desktop/compoailer/src\PAGEParser.g4 by ANTLR 4.9.1

package gen;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PAGEParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STARTPAGE=1, PAGE=2, CONTROLLER=3, CSS_PAGE=4, OBEN_CL=5, PATH=6, CLASS_CSS=7, 
		NAME_CSS=8, CLOSE_CSS=9, CLOSE_CL=10, COLOR=11, NUMBERING_M=12, SEMICOLNE_M=13, 
		BACKGROUNG=14, PADDING=15, MARGINATE=16, WIDTH=17, HEIGHT=18, NUMBER_=19, 
		NUMBER__=20, VALUE_COLOR=21, IF=22, END_IF=23, GO=24, CONTROLS=25, ID_CONTROLLER=26, 
		OPEN_CONTROLLER=27, CLOSE_CONTROLLER=28, FOR=29, PRINT=30, VARIABLE=31, 
		EQUAL_V=32, SEMICOLNE_V=33, ARRAY=34, OBJECT=35, SWITCH=36, COOKIES=37, 
		JSON=38, NAME_CONTROLLER=39, OBERATION_V=40, OBEN_P=41, STATMENT=42, CLOSE_P=43, 
		VALID=44, VAR_IF=45, OPERATION=46, SPACE=47, OBEN=48, CLOSE=49, NAME_VALID=50, 
		OBEN_VALID=51, CLOSE_VALID=52, COMMA_VALID=53, OBEN_PR=54, INSIDE_PR=55, 
		CLOSE_PR=56, INPUT=57, PRAGRAPH=58, EXTENDS=59, OUTPUT=60, ROW=61, TABLE=62, 
		LIST=63, DATA=64, HEAD=65, NAME_PAGE=66, ID_PAGE=67, COMMA_PAGE=68, OPEN_BODY=69, 
		CLOSE_BODY=70, LINK=71, SEMICOLNE_COLUM=72, OBEN_COLUMN=73, NAME_COLUMN=74, 
		COMMA_COLUMN=75, CLOSE_COLUMN=76, PARAGRAPH=77, CLOSE_LIST=78, OBEN_LIST=79, 
		COMMA_LIST=80, CSS=81, SCRIPT=82, EQUAL=83, NAME_TEXT=84, SESSION=85, 
		CLASS=86, VALUE_OPTION=87, NAME_OPTION=88, OPTION=89, SELECT=90, IMAGE=91, 
		EXTENSTION=92, TEXT=93, NUMBERING_MARK=94, FIELD=95, EMAIL=96, NUMBER=97, 
		PASSWORD=98, DATE=99, CHECKBOX=100, RADIO=101, FILE=102, OBEN_NAME=103, 
		CLOSE_NAME=104, COMMA=105, SEMICOLNE=106, ITEM=107, COMMA_S=108, ASSIGNMENT=109, 
		CLOSE_S=110, NAME=111, NAME_V=112, OBEN_CLASS=113, NAME_CLASS=114, COMMA_CLASS=115, 
		CLOSE_CLASS=116, HREF=117, NAME_LINK=118, CLASSTABLE=119;
	public static final int
		RULE_language = 0, RULE_start = 1, RULE_page = 2, RULE_defination_page = 3, 
		RULE_name_page = 4, RULE_body = 5, RULE_head = 6, RULE_css = 7, RULE_script = 8, 
		RULE_inside = 9, RULE_pragraph = 10, RULE_list = 11, RULE_link = 12, RULE_table = 13, 
		RULE_head_table = 14, RULE_column = 15, RULE_row = 16, RULE_output = 17, 
		RULE_input = 18, RULE_type_IN = 19, RULE_select = 20, RULE_type_OUT = 21, 
		RULE_class_ = 22, RULE_class_table = 23, RULE_name = 24, RULE_name_out = 25, 
		RULE_option = 26, RULE_data = 27, RULE_seesion = 28, RULE_array_s = 29, 
		RULE_item = 30, RULE_back_end = 31, RULE_defnation_controller = 32, RULE_name_controller = 33, 
		RULE_name_controller_page = 34, RULE_controller = 35, RULE_body_controller = 36, 
		RULE_if_body = 37, RULE_condition = 38, RULE_for_body = 39, RULE_print_php = 40, 
		RULE_variable = 41, RULE_css_page = 42, RULE_body_css = 43, RULE_body_class = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"language", "start", "page", "defination_page", "name_page", "body", 
			"head", "css", "script", "inside", "pragraph", "list", "link", "table", 
			"head_table", "column", "row", "output", "input", "type_IN", "select", 
			"type_OUT", "class_", "class_table", "name", "name_out", "option", "data", 
			"seesion", "array_s", "item", "back_end", "defnation_controller", "name_controller", 
			"name_controller_page", "controller", "body_controller", "if_body", "condition", 
			"for_body", "print_php", "variable", "css_page", "body_css", "body_class"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'array'", 
			"'object'", "'switch'", "'cookies'", "'json'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'input'", null, null, "'output'", null, null, "'list'", 
			"'data'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'css'", "'script'", null, null, 
			null, "'class'", null, null, null, "'select'", "'image'", null, "'text'", 
			null, "'field'", "'email'", "'number'", "'password'", "'date'", "'checkbox'", 
			"'radio'", "'file'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STARTPAGE", "PAGE", "CONTROLLER", "CSS_PAGE", "OBEN_CL", "PATH", 
			"CLASS_CSS", "NAME_CSS", "CLOSE_CSS", "CLOSE_CL", "COLOR", "NUMBERING_M", 
			"SEMICOLNE_M", "BACKGROUNG", "PADDING", "MARGINATE", "WIDTH", "HEIGHT", 
			"NUMBER_", "NUMBER__", "VALUE_COLOR", "IF", "END_IF", "GO", "CONTROLS", 
			"ID_CONTROLLER", "OPEN_CONTROLLER", "CLOSE_CONTROLLER", "FOR", "PRINT", 
			"VARIABLE", "EQUAL_V", "SEMICOLNE_V", "ARRAY", "OBJECT", "SWITCH", "COOKIES", 
			"JSON", "NAME_CONTROLLER", "OBERATION_V", "OBEN_P", "STATMENT", "CLOSE_P", 
			"VALID", "VAR_IF", "OPERATION", "SPACE", "OBEN", "CLOSE", "NAME_VALID", 
			"OBEN_VALID", "CLOSE_VALID", "COMMA_VALID", "OBEN_PR", "INSIDE_PR", "CLOSE_PR", 
			"INPUT", "PRAGRAPH", "EXTENDS", "OUTPUT", "ROW", "TABLE", "LIST", "DATA", 
			"HEAD", "NAME_PAGE", "ID_PAGE", "COMMA_PAGE", "OPEN_BODY", "CLOSE_BODY", 
			"LINK", "SEMICOLNE_COLUM", "OBEN_COLUMN", "NAME_COLUMN", "COMMA_COLUMN", 
			"CLOSE_COLUMN", "PARAGRAPH", "CLOSE_LIST", "OBEN_LIST", "COMMA_LIST", 
			"CSS", "SCRIPT", "EQUAL", "NAME_TEXT", "SESSION", "CLASS", "VALUE_OPTION", 
			"NAME_OPTION", "OPTION", "SELECT", "IMAGE", "EXTENSTION", "TEXT", "NUMBERING_MARK", 
			"FIELD", "EMAIL", "NUMBER", "PASSWORD", "DATE", "CHECKBOX", "RADIO", 
			"FILE", "OBEN_NAME", "CLOSE_NAME", "COMMA", "SEMICOLNE", "ITEM", "COMMA_S", 
			"ASSIGNMENT", "CLOSE_S", "NAME", "NAME_V", "OBEN_CLASS", "NAME_CLASS", 
			"COMMA_CLASS", "CLOSE_CLASS", "HREF", "NAME_LINK", "CLASSTABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PAGEParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PAGEParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class LanguageContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public LanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_language; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterLanguage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitLanguage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitLanguage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LanguageContext language() throws RecognitionException {
		LanguageContext _localctx = new LanguageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_language);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			start();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode STARTPAGE() { return getToken(PAGEParser.STARTPAGE, 0); }
		public Css_pageContext css_page() {
			return getRuleContext(Css_pageContext.class,0);
		}
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<Back_endContext> back_end() {
			return getRuleContexts(Back_endContext.class);
		}
		public Back_endContext back_end(int i) {
			return getRuleContext(Back_endContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(STARTPAGE);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				{
				setState(93);
				page();
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CONTROLLER) {
					{
					{
					setState(94);
					back_end();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PAGE );
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CSS_PAGE) {
				{
				setState(104);
				css_page();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public Defination_pageContext defination_page() {
			return getRuleContext(Defination_pageContext.class,0);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(107);
			defination_page();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Defination_pageContext extends ParserRuleContext {
		public TerminalNode PAGE() { return getToken(PAGEParser.PAGE, 0); }
		public Name_pageContext name_page() {
			return getRuleContext(Name_pageContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<HeadContext> head() {
			return getRuleContexts(HeadContext.class);
		}
		public HeadContext head(int i) {
			return getRuleContext(HeadContext.class,i);
		}
		public Defination_pageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defination_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterDefination_page(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitDefination_page(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitDefination_page(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Defination_pageContext defination_page() throws RecognitionException {
		Defination_pageContext _localctx = new Defination_pageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defination_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			match(PAGE);
			setState(110);
			name_page();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HEAD) {
				{
				{
				setState(111);
				head();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			body();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_pageContext extends ParserRuleContext {
		public TerminalNode NAME_PAGE() { return getToken(PAGEParser.NAME_PAGE, 0); }
		public List<TerminalNode> ID_PAGE() { return getTokens(PAGEParser.ID_PAGE); }
		public TerminalNode ID_PAGE(int i) {
			return getToken(PAGEParser.ID_PAGE, i);
		}
		public TerminalNode EXTENDS() { return getToken(PAGEParser.EXTENDS, 0); }
		public List<TerminalNode> COMMA_PAGE() { return getTokens(PAGEParser.COMMA_PAGE); }
		public TerminalNode COMMA_PAGE(int i) {
			return getToken(PAGEParser.COMMA_PAGE, i);
		}
		public Name_pageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterName_page(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitName_page(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitName_page(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Name_pageContext name_page() throws RecognitionException {
		Name_pageContext _localctx = new Name_pageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(NAME_PAGE);
			setState(120);
			match(ID_PAGE);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(121);
				match(EXTENDS);
				setState(122);
				match(ID_PAGE);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA_PAGE) {
					{
					{
					setState(123);
					match(COMMA_PAGE);
					setState(124);
					match(ID_PAGE);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode OPEN_BODY() { return getToken(PAGEParser.OPEN_BODY, 0); }
		public TerminalNode CLOSE_BODY() { return getToken(PAGEParser.CLOSE_BODY, 0); }
		public List<InsideContext> inside() {
			return getRuleContexts(InsideContext.class);
		}
		public InsideContext inside(int i) {
			return getRuleContext(InsideContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(OPEN_BODY);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 57)) & ~0x3f) == 0 && ((1L << (_la - 57)) & ((1L << (INPUT - 57)) | (1L << (PRAGRAPH - 57)) | (1L << (OUTPUT - 57)) | (1L << (TABLE - 57)) | (1L << (LIST - 57)) | (1L << (DATA - 57)) | (1L << (LINK - 57)))) != 0)) {
				{
				{
				setState(133);
				inside();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(CLOSE_BODY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public TerminalNode HEAD() { return getToken(PAGEParser.HEAD, 0); }
		public CssContext css() {
			return getRuleContext(CssContext.class,0);
		}
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_head);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(HEAD);
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CSS:
				{
				setState(142);
				css();
				}
				break;
			case SCRIPT:
				{
				setState(143);
				script();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CssContext extends ParserRuleContext {
		public TerminalNode CSS() { return getToken(PAGEParser.CSS, 0); }
		public TerminalNode EQUAL() { return getToken(PAGEParser.EQUAL, 0); }
		public TerminalNode NAME_TEXT() { return getToken(PAGEParser.NAME_TEXT, 0); }
		public CssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_css; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterCss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitCss(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitCss(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CssContext css() throws RecognitionException {
		CssContext _localctx = new CssContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_css);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(CSS);
			setState(147);
			match(EQUAL);
			setState(148);
			match(NAME_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode SCRIPT() { return getToken(PAGEParser.SCRIPT, 0); }
		public TerminalNode EQUAL() { return getToken(PAGEParser.EQUAL, 0); }
		public TerminalNode NAME_TEXT() { return getToken(PAGEParser.NAME_TEXT, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_script);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(SCRIPT);
			setState(151);
			match(EQUAL);
			setState(152);
			match(NAME_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsideContext extends ParserRuleContext {
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public PragraphContext pragraph() {
			return getRuleContext(PragraphContext.class,0);
		}
		public InsideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inside; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).enterInside(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGEParserListener ) ((PAGEParserListener)listener).exitInside(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PAGEParserVisitor ) return ((PAGEParserVisitor<? extends T>)visitor).visitInside(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsideContext inside() throws RecognitionException {
		InsideContext _localctx = new InsideContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_inside);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUT:
				{
				setState(154);
				input();
				}
				break;
			case OUTPUT:
				{
				setState(155);
				output();
				}
				break;
			case LINK:
				{
				setState(156);
				link();
				}
				break;
			case TABLE:
				{
				setState(157);
				table();
				}
				break;
			case LIST:
				{
				setState(158);
				list();
				}
				break;
			case DATA:
				{
				setState(159);
				data();
				}
				break;
			case PRAGRAPH:
				{
				setState(160);
				pragraph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
